fixed a few js bugs on IE. It still doesn't not work because IE throws an exception at console.debug [jquery.epie.js#9], comment the line to make it work (I leave it like that because being able to log in the console is pretty awesome in development mode).
added zoom util. Very simple to use:
epie.gui.config.zoom().zoom(50); // zooms at 50%, any positive value will work
epie.gui.config.zoom().fitWidth(); // will fit the image to the width of its container
epie.gui.config.zoom().fitWidth(); // will fit the image to the height of its container

epie.gui.config.init(image_width, image_height) must be called everytime the image dimensions change (e.g. after a crop)

now the prepare view (epie/prepare) returns the image width and height (computed with the ez component imageanalyzer)



git-svn-id: http://svn.projects.ez.no/epie@14 621ec555-2961-457b-befc-e0ae98695168

--- a/trunk/epie/design/standard/stylesheets/epie.css
+++ b/trunk/epie/design/standard/stylesheets/epie.css
@@ -10,7 +10,7 @@
 
 .epieBox * {
     margin:0px;
-    padding:0pxfi;
+    padding:0px;
 }
 
 .drawZone {
@@ -80,7 +80,7 @@
 }
 
 .content {
-    background:url("../images/editorBg.png");
+    background: #CACACA;
     position:relative;
 }
 
@@ -88,6 +88,16 @@
     height:370px;
     margin-right:161px;
     overflow:scroll;
+    text-align: center;
+}
+
+#main_image {
+    background: url(../images/editorBg.png);
+    border: 1px solid #505050;
+    display: inline-block;
+}
+
+#main_image img {
 }
 
 .topMenu {
